Update http last version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
-name: http_middleware
-description: A middleware library for Dart http library.
-version: 1.0.0
-author: Gurleen Sethi <sarusethi@rocketmail.com>
-homepage: https://github.com/gurleensethi/http_middleware
+name: http_middleware_library
+description: A middleware library for Dart http library forked from TEDConsulting/http_middleware.
+homepage: https://github.com/sdugene/http_middleware_library
+version: 0.12.1
 
 dependencies:
-  http: ^0.12.0
+  http: ^0.12.1
+  collection: ^1.14.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -42,5 +42,4 @@ dependencies:
   # For details regarding fonts in packages, see
   # https://flutter.io/custom-fonts/#from-packages
 environment:
-  sdk: ">=2.0.0-dev.28.0 <3.0.0"
-  flutter: ">=0.1.4 <2.0.0"
+  sdk: ">=2.1.0 <3.0.0"
